feat:English - Spanish translation of the Portfolio, ProfileSidebar sections.

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -46,6 +46,38 @@
   "resumeItemTitle1" : "Judicial Power of the Federation.",
   "resumeItemDescription1" : "Specialized Analyst.",
   "resumeItemTitle2" : "Council of the Federal Judicature.",
-  "resumeItemDescription2" : "Protection of Magistrates of the Federal Government."  
+  "resumeItemDescription2" : "Protection of Magistrates of the Federal Government.",
+  "resumeItemTitle3" : "Judicial Power of the Federation.",
+  "resumeItemDescription3" : "Middle Management Assistant.",
+  "resumeItemTitle4" : "Electoral Tribunal of the Federal Judiciary.",
+  "resumeItemDescription4" : "Protection of Magistrates of the Federal Government.",
+  "resumeItemTitle5" : "Judicial Power of the Federation.",
+  "resumeItemDescription5"  : "Security Officer.",
+  "resumeItemTitle6" : "Electoral Tribunal of the Federal Judiciary.",
+  "resumeItemDescription6" : "Protection of Real Estate, Assets and Officials of the Federal Government.",
+  "resumeItemTitle7" : "Federal Public Security Secretary.",
+  "resumeItemDescription7" : "Personal Security to Government Officials.",
+  "resumeItemTitle8" : "Federal Protection Service.",
+  "resumeItemDescription8" : "Intramural Guard in Federal Buildings and Strategic Facilities.",
+  "resumeItemTitle9" : "Secretariat of Finance and Public Credit.",
+  "resumeItemDescription9" : "Federal Tax Police.",
+  "resumeItemTitle10" : "General Administration of Customs.",
+  "resumeItemDescription10" : "Review of Foreign trade merchandise for the payment of taxes.",
+  "resumeItemTitle11" : "Tax Administration Service (SAT).",
+  "resumeItemDescription11" : "Review of petitions in different Customs of the country, checking the import or export of merchandise and vehicles, complying with the payment of taxes.",
+  "mySkillsTitle" : "MySkills",
+  "mySkillsH1" : "My",
+  "mySkillsSpan" : "Skills.",
+  "portfolioTitle" : "Portfolio",
+  "portfolioH1" : "Featured",
+  "portfolioSpan" : "Proyects",
+  "portfolioItemTitle" : "Car Repair - Mechanic Services.",
+  "portfolioItemTitle2" : "Portfolio - Featured Projects.",
+  "portfolioItemTitle3" : "Foodhub - Recipe Website.",
+  "portfolioItemTitle4" : "Hamburger - Restaurant E-commerce.",
+  "portfolioItemTitle5" : "SappApp - App Landing Page",
+  "profileP" : "Front-End Developer.",
+  "profileH2" : "Base in Toluca, Mex.",
+  "profileButton" : "Hire Me!"
 }
   
