--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -6,10 +6,10 @@
   "fullNamePlaceholder" : "Nombre Completo",
   "email" : "Correo Electronico",
   "EmailAddressPlaceholder" : "Dirección de Correo Electronico",
-  "phone" : "Telefono (Telelfono Opcional)",
-  "PhonePlaceholder" : "Número de Teléfono",
-  "subject" : "Subject",
-  "SubjectPlaceholder" : "Asunto",
+  "phone" : "Telefono (Opcional)",
+  "phonePlaceholder" : "Número de Teléfono",
+  "subject" : "Asunto",
+  "SubjectPlaceholder" : "Escriba El Asunto Aqui...",
   "message" : "Mensaje",
   "messagePlaceholder" : "Escriba Su Mensaje Aqui...",
   "submit" : "Enviar",
@@ -30,11 +30,11 @@
   "introduceH1" : "Saludos De",
   "introduceh1" : "Desarrollador Front-End.",
   "introduceParagraph" : "Me especializo en la creación de sitios web elegantes y modernos, tiendas virtuales en línea. Mi pasión es desarrollar experiencias de usuario digitales a través de una interfaz audaz e interacciones significativas.",
-  "menuTitleH" : "Casa",
+  "menuTitleH" : "Introducción",
   "menuTitleA" : "Acerca De",
   "menuTitleR" : "Curriculum",
-  "menuTitleM" : "Mis Habilidades",
-  "menuTitleP" : "Mis Proyectos",
+  "menuTitleM" : "Habilidades",
+  "menuTitleP" : "Proyectos",
   "menuTitleC" : "Contacto",
   "resumeTitle" : "Curriculum",
   "resumeH1" : "Educación & ",
@@ -46,5 +46,37 @@
   "resumeItemTitle1" : "Poder Judicial de la Federación.",
   "resumeItemDescription1" : "Analista Especializado.",
   "resumeItemTitle2" : "Consejo de la Judicatura Federal.",
-  "resumeItemDescription2" : "Protección de los Magistrados del Gobierno Federal."  
+  "resumeItemDescription2" : "Protección de los Magistrados del Gobierno Federal.",
+  "resumeItemTitle3" : "Poder Judicial de la Federación.",
+  "resumeItemDescription3" : "Auxiliar de Mandos Medios",
+  "resumeItemTitle4": "Tribunal Electoral del Poder Judicial de la Federación.",
+  "resumeItemDescription4" : "Protección de los Magistrados del Gobierno Federal",
+  "resumeItemTitle5" : "Poder Judicial de la Federación.",
+  "resumeItemDescription5"  : "Oficial de seguridad.",
+  "resumeItemTitle6" : "Tribunal Electoral del Poder Judicial de la Federación.",
+  "resumeItemDescription6" : "Protección de Bienes Inmuebles Estrategicos, Bienes Muebles y Funcionarios del Gobierno Federal.",
+  "resumeItemTitle7" : "Secretaría de Seguridad Pública Federal.",
+  "resumeItemDescription7" : "Seguridad Personal de Funcionarios del Gobierno Federal.",
+  "resumeItemTitle8" : "Servicio de Protección Federal.",
+  "resumeItemDescription8" : "Guardia Intramuros en Edificios Federales e Instalaciones Estratégicas.",
+  "resumeItemTitle9" : "Secretaría de Hacienda y Crédito Público.",
+  "resumeItemDescription9" : "Policía Fiscal Federal.",
+  "resumeItemTitle10" : "Administración General de Aduanas.",
+  "resumeItemDescription10" : "Revisión de mercancías de Comercio Exterior para el pago de impuestos.",
+  "resumeItemTitle11" : "Servicio de Administración Tributaria (SAT).",
+  "resumeItemDescription11" : "Revisión de pedimentos en diferentes Aduanas del país, controlando la importación o exportación de mercancías y vehículos, cumpliendo con el pago de impuestos.",
+  "mySkillsTitle" : "Mis habilidades",
+  "mySkillsH1" : "Mis",
+  "mySkillsSpan" : "Aptitudes.",
+  "portfolioTitle" : "Curriculum",
+  "portfolioH1" : "Proyectos",
+  "portfolioSpan" : "Destacados",
+  "portfolioItemTitle" : "Car Repair - Servicios Mecánicos.",
+  "portfolioItemTitle2" : "Portafolio - Proyectos Destacados.",
+  "portfolioItemTitle3" : "Foodhub - Sitio Web de Recetas.",
+  "portfolioItemTitle4" : "Hamburger - Restaurante E-commerce.",
+  "portfolioItemTitle5" : "SappApp - Página de Aterrizaje.",
+  "profileP" : "Desarrollador Front-End.",
+  "profileH2" : "Base en Toluca, Mex.",
+  "profileButton" : "Contratame!"
 }
